# FlightDynamics

./: CMakeLists.txt  F_15_Active.py  Untitled.ipynb
docs/: Doxyfile.in
inc/FlightDynamics/: CoordSys.hpp  Kinematics.hpp  Matrix.h  Matrix.hpp  Utilities.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  CoordSys.cpp  Kinematics.cpp  Matrix.cpp  Utilities.cpp  main.cpp
test/: CMakeLists.txt  test_Matrix.cpp  test_main.cpp  test_utilities.cpp
